--- a/ms_ref.bib
+++ b/ms_ref.bib
@@ -168,3 +168,20 @@
   author={Stephens, J},
   year={2014}
 }
+
+@article{guerin2017opportunities,
+  title={Opportunities for integrated ecological analysis across inland Australia with standardised data from Ausplots Rangelands},
+  author={Guerin, Greg R and Sparrow, Ben and Tokmakoff, Andrew and Smyth, Anita and Leitch, Emrys and Baruch, Zdravko and Lowe, Andrew J},
+  journal={PloS one},
+  volume={12},
+  number={1},
+  pages={e0170137},
+  year={2017},
+  publisher={Public Library of Science}
+}
+
+@article{team2018r,
+  title={R Development Core Team. R: A language and environment for statistical computing. R Foundation for Statistical Computing, Vienna, Austria; 2014},
+  author={R Core Team},
+  year={2018}
+}
